# glslfx

./: COPYING  Makefile.am  ProjectHome.md  configure.ac
include/glslfx/: effect.h  forward.h  glslfx.h  log.h  pass.h  technique.h
m4/: ax_check_glut.m4
src/: effect.cpp  libglslfx.cpp  log.cpp  parser_fx.rl  pass.cpp  technique.cpp  validator.cpp
tests/: enumerate.c  foo.cpp  simple.glslfx  simple_frag.glsl  simple_vert.glsl  test.glsl
